--- a/web/src/components/select/styles.css
+++ b/web/src/components/select/styles.css
@@ -16,10 +16,11 @@
     height: 5.6rem;
     margin-top: 0.8rem;
     border-radius: 0.8rem;
-    background: var(--color-line-in-white);
+    background: var(--color-input-background);
     outline: 0;
     padding: 0 1.6rem;
     font: 1.6rem Archivo;
+    border: 1px solid var(--color-line-in-white);
 }
 
 .select-block:focus-within::after {
