--- a/web/src/components/textArea/styles.css
+++ b/web/src/components/textArea/styles.css
@@ -17,11 +17,12 @@
     min-height: 8rem;
     margin-top: 0.8rem;
     border-radius: 0.8rem;
-    background: var(--color-line-in-white);
+    background: var(--color-input-background);
     outline: 0;
     resize: vertical;
     padding: 1.2rem 1.6rem;
     font: 1.6rem Archivo;
+    border: 1px solid var(--color-line-in-white);
 }
 
 .textarea-block:focus-within::after {
